# esp32-imu-baro

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  platformio copy.ini  platformio.ini  sdkconfig.custom-demo-m5stack-core2-bottom2  sdkconfig.custom-demo-m5stack-coreS3  sdkconfig.custom-demo-m5stack-coreS3.old  sdkconfig.custom-demo-m5stack-coreS3newold  sdkconfig.custom_demo_m5stack_core2  sdkconfig.custom_demo_m5stack_core2_bottom2  sdkconfig.custom_demo_m5stack_core2_bottom2.old  sdkconfig.custom_demo_m5stack_coreS3  sdkconfig.custom_demo_m5stack_coreS3_hilmar.old  sdkconfig.custom_demo_m5stack_coreS3_jtag  sdkconfig.custom_demom5stamp_C3U_jtag  sdkconfig.defaults
src/: CMakeLists.txt  README.md  dps3xx.cpp  i2cscanner.cpp  main.cpp  util.cpp
src/ESP-File-Server/: ESP-File-Server.cpp  credentials.h
src/ESPUI-test/: completeExample.cpp  espui.cpp
src/ESPxWebFlMgr-test/: ESP32basicwsagzip.cpp  webserver.cpp
src/app/: ArduinoJsonCustom.hpp  BLEdecoder.cpp  Cache.hpp  CustomWatchdog.cpp  TreeWalker.hpp  board.cpp  cli.cpp  custom.cpp  defaults.hpp  defs.hpp  devices.cpp  espstatus.cpp  espstatus.hpp  fastled.cpp  fmtlib_error.cpp  fsVisitor.hpp  fsvisitor.cpp  i2cdefs.h  i2cscan.cpp  initimu.cpp  initsensors.cpp  logmacros.hpp  lv_setup.cpp  main.cpp  maskbits.h  meteo.cpp  meteo.hpp  mopeka.h  motioncal.cpp  platform_defaults.h  prefs.cpp  probe.cpp  probe.hpp  probesupport.cpp  reporter.cpp  ruuvi.h  sdcard.cpp  sdcard.hpp  sdfat-listdir.cpp  sensorreader.cpp  (+12 more)
src/custom-example/: custom.cpp  custom.hpp
src/decoder/: ScanAndDecode.cpp
src/ui/: ui.c  (+6 more)
(+80 files in other folders)
